[package]
name = "saccount_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
dotenvy = "0.15"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "macros", "runtime-tokio"] }